// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render in loading state 1`] = `
<label
  class="multiAutoComplete"
>
  <div
    class="icon"
  >
    <div
      class="spinner"
      style="width:20px;height:20px"
    >
      <div
        class="doubleBounce1"
      />
      <div
        class="doubleBounce2"
      />
    </div>
  </div>
  <div
    class="items"
  >
    <input
      class="input mousetrap"
      value=""
    />
  </div>
</label>
`;

exports[`Render with given value 1`] = `
<label
  class="multiAutoComplete"
>
  <div
    class="icon"
  >
    <span
      aria-label="su-search"
      class="su-search"
    />
  </div>
  <div
    class="items"
  >
    <div
      class="item"
    >
      James Bond
      <span
        aria-label="su-times"
        class="su-times clickable icon"
        role="button"
        tabindex="0"
      />
    </div>
    <div
      class="item"
    >
      John Doe
      <span
        aria-label="su-times"
        class="su-times clickable icon"
        role="button"
        tabindex="0"
      />
    </div>
    <input
      class="input mousetrap"
      value=""
    />
  </div>
</label>
`;
